--- a/client/src/components/Success/Success.module.css
+++ b/client/src/components/Success/Success.module.css
@@ -5,7 +5,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 20px;
+  gap: 10px;
+  font-size: 14px;
 }
 
 .Success button {
