--- a/client/src/components/Success/Success.module.sass
+++ b/client/src/components/Success/Success.module.sass
@@ -1,7 +1,8 @@
 .Success
     display: flex
     align-items: center
-    gap: 20px
+    gap: 10px
+    font-size: 14px
     button
         border-radius: 5px
         border: none
